infrastructure/traefik-dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik
  labels:
    app.kubernetes.io/name: traefik
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: "traefik.home.pynenborg.com"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 80
  tls:
    - hosts:
        - "traefik.home.pynenborg.com"
      secretName: traefik-cert
